[package]
name = "mine_data_structs"
version = "1.0.9"
edition = "2024"
authors = ["sergious234 <sergious23@gmail.com>"]
description = "Minecraft data structures"
license = "GPL-2.0"
keywords = ["minecraft"]
repository = "https://github.com/sergious234/mine_data_structs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
indexmap = {version="2.10.0", features=["serde", "rayon"]}
serde = { version = "^1", features = ["derive"], optional=true }
serde_json = { version = "^1", default-features = false, features = ["alloc", "std"], optional=true}

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
